--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "inquirer": "8.2.0",
     "mustache": "^4.2.0",
     "react-app-rewired": "^2.2.1",
-    "source-map-explorer": "^2.5.3",
-    "webpack-bundle-analyzer": "^4.8.0"
+    "source-map-explorer": "^2.5.3"
   }
 }
